webapp/antlr/ours/MiniPythonParser.ts
// Generated from ours/MiniPythonParser.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import MiniPythonParserListener from "./MiniPythonParserListener";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class MiniPythonParser extends Parser {
	public static readonly STRING = 1;
	public static readonly NUMBER = 2;
	public static readonly INT = 3;
	public static readonly FLOAT = 4;
	public static readonly TRUE = 5;
	public static readonly FALSE = 6;
	public static readonly DOT = 7;
	public static readonly COLON = 8;
	public static readonly SEMICOLON = 9;
	public static readonly COMMA = 10;
	public static readonly LPAREN = 11;
	public static readonly RPAREN = 12;
	public static readonly LBRACK = 13;
	public static readonly RBRACK = 14;
	public static readonly LBRACE = 15;
	public static readonly RBRACE = 16;
	public static readonly ADD = 17;
	public static readonly SUB = 18;
	public static readonly DIV = 19;
	public static readonly MUL = 20;
	public static readonly MOD = 21;
	public static readonly ASSIGN = 22;
	public static readonly EQUALS = 23;
	public static readonly LESS_THAN = 24;
	public static readonly GREATER_THAN = 25;
	public static readonly GT_EQ = 26;
	public static readonly LT_EQ = 27;
	public static readonly NOT_EQUAL = 28;
	public static readonly ADD_ASSIGN = 29;
	public static readonly SUB_ASSIGN = 30;
	public static readonly MULT_ASSIGN = 31;
	public static readonly AT_ASSIGN = 32;
	public static readonly DIV_ASSIGN = 33;
	public static readonly MOD_ASSIGN = 34;
	public static readonly AND_ASSIGN = 35;
	public static readonly OR_ASSIGN = 36;
	public static readonly XOR_ASSIGN = 37;
	public static readonly AND = 38;
	public static readonly OR = 39;
	public static readonly NOT = 40;
	public static readonly AND_OP = 41;
	public static readonly OR_OP = 42;
	public static readonly NOT_OP = 43;
	public static readonly XOR = 44;
	public static readonly IS = 45;
	public static readonly IF = 46;
	public static readonly ELIF = 47;
	public static readonly ELSE = 48;
	public static readonly CASE = 49;
	public static readonly FOR = 50;
	public static readonly RANGE = 51;
	public static readonly IN = 52;
	public static readonly WHILE = 53;
	public static readonly DEF = 54;
	public static readonly RETURN = 55;
	public static readonly LAMBDA = 56;
	public static readonly BREAK = 57;
	public static readonly CONTINUE = 58;
	public static readonly PRINT = 59;
	public static readonly ASSERT = 60;
	public static readonly WITH = 61;
	public static readonly YIELD = 62;
	public static readonly UNDERSCORE = 63;
	public static readonly TRY = 64;
	public static readonly EXCEPT = 65;
	public static readonly FINALLY = 66;
	public static readonly RAISE = 67;
	public static readonly CLASS = 68;
	public static readonly FROM = 69;
	public static readonly IMPORT = 70;
	public static readonly ID = 71;
	public static readonly NEWLINE = 72;
	public static readonly WS = 73;
	public static readonly COMMENT = 74;
	public static readonly TRIPLE_STRING = 75;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_program = 0;
	public static readonly RULE_stmt = 1;
	public static readonly RULE_if_stmt = 2;
	public static readonly RULE_for_stmt = 3;
	public static readonly RULE_while_stmt = 4;
	public static readonly RULE_return_stmt = 5;
	public static readonly RULE_break_stmt = 6;
	public static readonly RULE_continue_stmt = 7;
	public static readonly RULE_funcdef = 8;
	public static readonly RULE_print_stmt = 9;
	public static readonly RULE_parameters = 10;
	public static readonly RULE_block = 11;
	public static readonly RULE_expr_stmt = 12;
	public static readonly RULE_expr = 13;
	public static readonly RULE_boolean = 14;
	public static readonly RULE_condition = 15;
	public static readonly RULE_and_condition = 16;
	public static readonly RULE_not_condition = 17;
	public static readonly RULE_comparison = 18;
	public static readonly RULE_comparison_op = 19;
	public static readonly RULE_assign = 20;
	public static readonly literalNames: (string | null)[] = [ null, null, 
                                                            null, null, 
                                                            null, "'True'", 
                                                            "'False'", "'.'", 
                                                            "':'", "';'", 
                                                            "','", "'('", 
                                                            "')'", "'['", 
                                                            "']'", "'{'", 
                                                            "'}'", "'+'", 
                                                            "'-'", "'/'", 
                                                            "'*'", "'%'", 
                                                            "'='", "'=='", 
                                                            "'<'", "'>'", 
                                                            "'>='", "'<='", 
                                                            "'!='", "'+='", 
                                                            "'-='", "'*='", 
                                                            "'@='", "'/='", 
                                                            "'%='", "'&='", 
                                                            "'|='", "'^='", 
                                                            "'and'", "'or'", 
                                                            "'not'", "'&'", 
                                                            "'|'", "'~'", 
                                                            "'^'", "'is'", 
                                                            "'if'", "'elif'", 
                                                            "'else'", "'case'", 
                                                            "'for'", "'range'", 
                                                            "'in'", "'while'", 
                                                            "'def'", "'return'", 
                                                            "'lambda'", 
                                                            "'break'", "'continue'", 
                                                            "'print'", "'assert'", 
                                                            "'with'", "'yield'", 
                                                            "'_'", "'try'", 
                                                            "'except'", 
                                                            "'finally'", 
                                                            "'raise'", "'class'", 
                                                            "'from'", "'import'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "STRING", 
                                                             "NUMBER", "INT", 
                                                             "FLOAT", "TRUE", 
                                                             "FALSE", "DOT", 
                                                             "COLON", "SEMICOLON", 
                                                             "COMMA", "LPAREN", 
                                                             "RPAREN", "LBRACK", 
                                                             "RBRACK", "LBRACE", 
                                                             "RBRACE", "ADD", 
                                                             "SUB", "DIV", 
                                                             "MUL", "MOD", 
                                                             "ASSIGN", "EQUALS", 
                                                             "LESS_THAN", 
                                                             "GREATER_THAN", 
                                                             "GT_EQ", "LT_EQ", 
                                                             "NOT_EQUAL", 
                                                             "ADD_ASSIGN", 
                                                             "SUB_ASSIGN", 
                                                             "MULT_ASSIGN", 
                                                             "AT_ASSIGN", 
                                                             "DIV_ASSIGN", 
                                                             "MOD_ASSIGN", 
                                                             "AND_ASSIGN", 
                                                             "OR_ASSIGN", 
                                                             "XOR_ASSIGN", 
                                                             "AND", "OR", 
                                                             "NOT", "AND_OP", 
                                                             "OR_OP", "NOT_OP", 
                                                             "XOR", "IS", 
                                                             "IF", "ELIF", 
                                                             "ELSE", "CASE", 
                                                             "FOR", "RANGE", 
                                                             "IN", "WHILE", 
                                                             "DEF", "RETURN", 
                                                             "LAMBDA", "BREAK", 
                                                             "CONTINUE", 
                                                             "PRINT", "ASSERT", 
                                                             "WITH", "YIELD", 
                                                             "UNDERSCORE", 
                                                             "TRY", "EXCEPT", 
                                                             "FINALLY", 
                                                             "RAISE", "CLASS", 
                                                             "FROM", "IMPORT", 
                                                             "ID", "NEWLINE", 
                                                             "WS", "COMMENT", 
                                                             "TRIPLE_STRING" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "stmt", "if_stmt", "for_stmt", "while_stmt", "return_stmt", 
		"break_stmt", "continue_stmt", "funcdef", "print_stmt", "parameters", 
		"block", "expr_stmt", "expr", "boolean", "condition", "and_condition", 
		"not_condition", "comparison", "comparison_op", "assign",
	];
	public get grammarFileName(): string { return "MiniPythonParser.g4"; }
	public get literalNames(): (string | null)[] { return MiniPythonParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return MiniPythonParser.symbolicNames; }
	public get ruleNames(): string[] { return MiniPythonParser.ruleNames; }
	public get serializedATN(): number[] { return MiniPythonParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, MiniPythonParser._ATN, MiniPythonParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let localctx: ProgramContext = new ProgramContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, MiniPythonParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 45;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 10360) !== 0) || ((((_la - 46)) & ~0x1F) === 0 && ((1 << (_la - 46)) & 100678545) !== 0)) {
				{
				{
				this.state = 42;
				this.stmt();
				}
				}
				this.state = 47;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 48;
			this.match(MiniPythonParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public stmt(): StmtContext {
		let localctx: StmtContext = new StmtContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, MiniPythonParser.RULE_stmt);
		try {
			this.state = 61;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 50;
				this.assign();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 51;
				this.if_stmt();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 52;
				this.for_stmt();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 53;
				this.while_stmt();
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 54;
				this.funcdef();
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 55;
				this.return_stmt();
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 56;
				this.break_stmt();
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 8);
				{
				this.state = 57;
				this.continue_stmt();
				}
				break;
			case 9:
				this.enterOuterAlt(localctx, 9);
				{
				this.state = 58;
				this.expr_stmt();
				}
				break;
			case 10:
				this.enterOuterAlt(localctx, 10);
				{
				this.state = 59;
				this.print_stmt();
				}
				break;
			case 11:
				this.enterOuterAlt(localctx, 11);
				{
				this.state = 60;
				this.match(MiniPythonParser.NEWLINE);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public if_stmt(): If_stmtContext {
		let localctx: If_stmtContext = new If_stmtContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, MiniPythonParser.RULE_if_stmt);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 63;
			this.match(MiniPythonParser.IF);
			this.state = 64;
			this.condition(0);
			this.state = 65;
			this.match(MiniPythonParser.COLON);
			this.state = 66;
			this.block();
			this.state = 74;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 2, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 67;
					this.match(MiniPythonParser.ELIF);
					this.state = 68;
					this.condition(0);
					this.state = 69;
					this.match(MiniPythonParser.COLON);
					this.state = 70;
					this.block();
					}
					}
				}
				this.state = 76;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 2, this._ctx);
			}
			this.state = 80;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				{
				this.state = 77;
				this.match(MiniPythonParser.ELSE);
				this.state = 78;
				this.match(MiniPythonParser.COLON);
				this.state = 79;
				this.block();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public for_stmt(): For_stmtContext {
		let localctx: For_stmtContext = new For_stmtContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, MiniPythonParser.RULE_for_stmt);
		try {
			this.state = 109;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 82;
				this.match(MiniPythonParser.FOR);
				this.state = 83;
				this.match(MiniPythonParser.ID);
				this.state = 84;
				this.match(MiniPythonParser.IN);
				this.state = 85;
				this.match(MiniPythonParser.ID);
				this.state = 86;
				this.match(MiniPythonParser.COLON);
				this.state = 87;
				this.block();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 88;
				this.match(MiniPythonParser.FOR);
				this.state = 89;
				this.match(MiniPythonParser.ID);
				this.state = 90;
				this.match(MiniPythonParser.IN);
				this.state = 91;
				this.match(MiniPythonParser.INT);
				this.state = 92;
				this.match(MiniPythonParser.DOT);
				this.state = 93;
				this.match(MiniPythonParser.DOT);
				this.state = 94;
				this.match(MiniPythonParser.INT);
				this.state = 95;
				this.match(MiniPythonParser.COLON);
				this.state = 96;
				this.block();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 97;
				this.match(MiniPythonParser.FOR);
				this.state = 98;
				this.match(MiniPythonParser.ID);
				this.state = 99;
				this.match(MiniPythonParser.IN);
				this.state = 100;
				this.match(MiniPythonParser.RANGE);
				this.state = 101;
				this.match(MiniPythonParser.LPAREN);
				this.state = 102;
				this.expr(0);
				this.state = 103;
				this.match(MiniPythonParser.COMMA);
				this.state = 104;
				this.expr(0);
				this.state = 105;
				this.match(MiniPythonParser.RPAREN);
				this.state = 106;
				this.match(MiniPythonParser.COLON);
				this.state = 107;
				this.block();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public while_stmt(): While_stmtContext {
		let localctx: While_stmtContext = new While_stmtContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, MiniPythonParser.RULE_while_stmt);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 111;
			this.match(MiniPythonParser.WHILE);
			this.state = 112;
			this.condition(0);
			this.state = 113;
			this.match(MiniPythonParser.COLON);
			this.state = 114;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public return_stmt(): Return_stmtContext {
		let localctx: Return_stmtContext = new Return_stmtContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, MiniPythonParser.RULE_return_stmt);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 116;
			this.match(MiniPythonParser.RETURN);
			this.state = 117;
			this.expr(0);
			this.state = 118;
			this.match(MiniPythonParser.NEWLINE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public break_stmt(): Break_stmtContext {
		let localctx: Break_stmtContext = new Break_stmtContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, MiniPythonParser.RULE_break_stmt);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 120;
			this.match(MiniPythonParser.BREAK);
			this.state = 121;
			this.match(MiniPythonParser.NEWLINE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public continue_stmt(): Continue_stmtContext {
		let localctx: Continue_stmtContext = new Continue_stmtContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, MiniPythonParser.RULE_continue_stmt);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 123;
			this.match(MiniPythonParser.CONTINUE);
			this.state = 124;
			this.match(MiniPythonParser.NEWLINE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public funcdef(): FuncdefContext {
		let localctx: FuncdefContext = new FuncdefContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, MiniPythonParser.RULE_funcdef);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 126;
			this.match(MiniPythonParser.DEF);
			this.state = 127;
			this.match(MiniPythonParser.ID);
			this.state = 128;
			this.parameters();
			this.state = 129;
			this.match(MiniPythonParser.COLON);
			this.state = 130;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public print_stmt(): Print_stmtContext {
		let localctx: Print_stmtContext = new Print_stmtContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, MiniPythonParser.RULE_print_stmt);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 132;
			this.match(MiniPythonParser.PRINT);
			this.state = 133;
			this.match(MiniPythonParser.LPAREN);
			this.state = 142;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 10360) !== 0) || _la===71) {
				{
				this.state = 134;
				this.expr(0);
				this.state = 139;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===10) {
					{
					{
					this.state = 135;
					this.match(MiniPythonParser.COMMA);
					this.state = 136;
					this.expr(0);
					}
					}
					this.state = 141;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 144;
			this.match(MiniPythonParser.RPAREN);
			this.state = 145;
			this.match(MiniPythonParser.NEWLINE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public parameters(): ParametersContext {
		let localctx: ParametersContext = new ParametersContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, MiniPythonParser.RULE_parameters);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 147;
			this.match(MiniPythonParser.LPAREN);
			this.state = 156;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===71) {
				{
				this.state = 148;
				this.match(MiniPythonParser.ID);
				this.state = 153;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===10) {
					{
					{
					this.state = 149;
					this.match(MiniPythonParser.COMMA);
					this.state = 150;
					this.match(MiniPythonParser.ID);
					}
					}
					this.state = 155;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 158;
			this.match(MiniPythonParser.RPAREN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let localctx: BlockContext = new BlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, MiniPythonParser.RULE_block);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 160;
			this.match(MiniPythonParser.NEWLINE);
			this.state = 161;
			this.stmt();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public expr_stmt(): Expr_stmtContext {
		let localctx: Expr_stmtContext = new Expr_stmtContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, MiniPythonParser.RULE_expr_stmt);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 163;
			this.expr(0);
			this.state = 164;
			this.match(MiniPythonParser.NEWLINE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public expr(): ExprContext;
	public expr(_p: number): ExprContext;
	// @RuleVersion(0)
	public expr(_p?: number): ExprContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: ExprContext = new ExprContext(this, this._ctx, _parentState);
		let _prevctx: ExprContext = localctx;
		let _startState: number = 26;
		this.enterRecursionRule(localctx, 26, MiniPythonParser.RULE_expr, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 200;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 13, this._ctx) ) {
			case 1:
				{
				this.state = 167;
				this.match(MiniPythonParser.ID);
				this.state = 168;
				this.match(MiniPythonParser.LPAREN);
				this.state = 177;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 10360) !== 0) || _la===71) {
					{
					this.state = 169;
					this.expr(0);
					this.state = 174;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la===10) {
						{
						{
						this.state = 170;
						this.match(MiniPythonParser.COMMA);
						this.state = 171;
						this.expr(0);
						}
						}
						this.state = 176;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					}
				}

				this.state = 179;
				this.match(MiniPythonParser.RPAREN);
				}
				break;
			case 2:
				{
				this.state = 180;
				this.match(MiniPythonParser.LPAREN);
				this.state = 181;
				this.expr(0);
				this.state = 182;
				this.match(MiniPythonParser.RPAREN);
				}
				break;
			case 3:
				{
				this.state = 184;
				this.match(MiniPythonParser.LBRACK);
				this.state = 193;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 10360) !== 0) || _la===71) {
					{
					this.state = 185;
					this.expr(0);
					this.state = 190;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la===10) {
						{
						{
						this.state = 186;
						this.match(MiniPythonParser.COMMA);
						this.state = 187;
						this.expr(0);
						}
						}
						this.state = 192;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					}
				}

				this.state = 195;
				this.match(MiniPythonParser.RBRACK);
				}
				break;
			case 4:
				{
				this.state = 196;
				this.match(MiniPythonParser.INT);
				}
				break;
			case 5:
				{
				this.state = 197;
				this.match(MiniPythonParser.FLOAT);
				}
				break;
			case 6:
				{
				this.state = 198;
				this.match(MiniPythonParser.ID);
				}
				break;
			case 7:
				{
				this.state = 199;
				this.boolean_();
				}
				break;
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 210;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 15, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					this.state = 208;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 14, this._ctx) ) {
					case 1:
						{
						localctx = new ExprContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, MiniPythonParser.RULE_expr);
						this.state = 202;
						if (!(this.precpred(this._ctx, 9))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 9)");
						}
						this.state = 203;
						localctx._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!(_la===17 || _la===18)) {
						    localctx._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 204;
						this.expr(10);
						}
						break;
					case 2:
						{
						localctx = new ExprContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, MiniPythonParser.RULE_expr);
						this.state = 205;
						if (!(this.precpred(this._ctx, 8))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 8)");
						}
						this.state = 206;
						localctx._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!(_la===19 || _la===20)) {
						    localctx._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 207;
						this.expr(9);
						}
						break;
					}
					}
				}
				this.state = 212;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 15, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}
	// @RuleVersion(0)
	public boolean_(): BooleanContext {
		let localctx: BooleanContext = new BooleanContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, MiniPythonParser.RULE_boolean);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 213;
			_la = this._input.LA(1);
			if(!(_la===5 || _la===6)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public condition(): ConditionContext;
	public condition(_p: number): ConditionContext;
	// @RuleVersion(0)
	public condition(_p?: number): ConditionContext {
		if (_p === undefined) {
			_p = 0;
		}
